--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -25,12 +25,12 @@
   "content_scripts": [
     {
       "js": ["./content.js"],
-      "matches": ["*://chat.openai.com/*", "*://chatgpt.com/*"],
+      "matches": ["*://chat.openai.com/*", "*://assistant.trimble.cloud/*", "*://chatgpt.com/*"],
       "run_at": "document_end"
     },
     {
       "css": ["./content.css"],
-      "matches": ["*://chat.openai.com/*", "*://chatgpt.com/*"],
+      "matches": ["*://chat.openai.com/*", "*://assistant.trimble.cloud/*", "*://chatgpt.com/*"],
       "run_at": "document_start"
     }
   ]
